[tool.poetry]
name = "clack_auth"
version = "0.1.0"
description = "Clack authentication plugin."
authors = ["Luke Hodkinson <furious.luke@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
click = "^8.0.1"
rich = "^12.5.1"
python-gnupg = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[tool.poetry.plugins."clack"]
auth = "clack_auth.plugin:plugin"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
